fix: исправит нейминг button

--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -22,7 +22,7 @@ include ./blocks/intro
 
 //- Mixins
 
-include ./mixins/btn
+include ./mixins/button
 include ./mixins/custom-input
 include ./mixins/custom-select
 include ./mixins/custom-textarea
