--- a/source/pug/pages/ui-kit.pug
+++ b/source/pug/pages/ui-kit.pug
@@ -104,7 +104,7 @@ block main
       pointer-events: none;
     }
 
-    .btn {
+    .button {
       margin: 10px 0;
     }
 
@@ -132,24 +132,24 @@ block main
       section(id="modals")
         h2 Modals
         p
-          +btn({text: "modal-feedback"})(data-open-modal="feedback")
+          +button({text: "modal-feedback"})(data-open-modal="feedback")
         p
-          +btn({text: "modal-success"})(data-open-modal="success")
+          +button({text: "modal-success"})(data-open-modal="success")
 
       section(id="buttons")
         h2 Buttons
-        +btn({text: "Текст", href: "#"})
+        +button({text: "Текст", href: "#"})
         p Пример вызова
         code
-          pre +btn({text: "Текст", href: "#"})
-        +btn({text: "Текст", href: "#", isExternal: true})(aria-label="Просто ссылка").btn--red
+          pre +button({text: "Текст", href: "#"})
+        +button({text: "Текст", href: "#", isExternal: true})(aria-label="Просто ссылка").button--red
         p Пример вызова
         code
-          pre +btn({text: "Я красная ссылка", href: "#", isExternal: true})(aria-label="Просто ссылка").btn--red
-        +btn({text: "Текст"})(disabled)
+          pre +button({text: "Я красная ссылка", href: "#", isExternal: true})(aria-label="Просто ссылка").button--red
+        +button({text: "Текст"})(disabled)
         p Пример вызова
         code
-          pre +btn({text: "Текст"})(disabled)
+          pre +button({text: "Текст"})(disabled)
 
       section(id="form-elements")
         h2 Form elements
@@ -189,14 +189,14 @@ block main
             .input-upload.input-upload--file(data-upload="file", data-validate-type="custom-upload", data-required)
               label
                 input(type="file", name="upload-file")
-                span.btn Загрузить файл
+                span.button Загрузить файл
             hr
             .input-upload.input-upload--images-drop(data-upload="img-drop", data-validate-type="custom-upload", data-required)
               .input-upload__drop-zone(data-drop-zone)
                 span.input-upload__drop-zone-text Перетащите сюда файлы
               label(data-drop-zone)
                 input(type="file", name="upload-file")
-                span.btn Загрузить файл
+                span.button Загрузить файл
             hr
             p Textarea #[b data-validate-type="text"].
             +custom-textarea({
@@ -238,8 +238,8 @@ block main
             })("data-select", data-validate-type="select", data-name="some-name", data-id="id-example-2", data-message-base="Поле обязательно к заполнению").custom-select
             hr
 
-            +btn({text: "Сбросить форму", type: "reset"})
-            +btn({text: "Отправить форму", type: "submit"})
+            +button({text: "Сбросить форму", type: "reset"})
+            +button({text: "Отправить форму", type: "submit"})
 
   script
     include ../../js/inline/ui-kit.js
