--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,7 +23,7 @@
 @import "blocks/main-nav";
 @import "blocks/footer";
 @import "blocks/modal";
-@import "blocks/btn";
+@import "blocks/button";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
