fix: удалит неиспользуемый код

--- a/source/pug/pages/ui-kit.pug
+++ b/source/pug/pages/ui-kit.pug
@@ -142,10 +142,10 @@ block main
         p Пример вызова
         code
           pre +button({text: "Текст", href: "#"})
-        +button({text: "Текст", href: "#", isExternal: true})(aria-label="Просто ссылка").button--red
+        +button({text: "Текст", href: "#", isExternal: true})(aria-label="Просто ссылка")
         p Пример вызова
         code
-          pre +button({text: "Я красная ссылка", href: "#", isExternal: true})(aria-label="Просто ссылка").button--red
+          pre +button({text: "Я красная ссылка", href: "#", isExternal: true})(aria-label="Просто ссылка")
         +button({text: "Текст"})(disabled)
         p Пример вызова
         code
