--- a/source/pug/components/base/header.pug
+++ b/source/pug/components/base/header.pug
@@ -1,36 +1,30 @@
 mixin header(headerMods, currentUrl)
   -
-    const headerLinks = [
+    const navigationLinks = [
       {
         href: "index.html",
-        text: "Главная"
+        text: "Анимации"
       },
       {
-        href: "#",
-        text: "Страница 2"
+        href: "map-1.html",
+        text: "Карта 1"
       },
       {
-        href: "#",
-        text: "Страница 3"
+        href: "map-2.html",
+        text: "Карта 2"
       },
+      {
+        href: "map-3.html",
+        text: "Карта 3"
+      },
+      {
+        href: "map-4.html",
+        text: "Карта 4"
+      }
     ]
 
   header.header(class=headerMods)
     .container
-      if(currentUrl === "index.html")
-        //- lighthouse снимает 10 баллов SEO за <a> без href
-        span.header__logo Логотип
-      else
-        a.header__logo(href="index.html", aria-label="Переход на главную") Логотип
-      nav.main-nav
-        button.main-nav__toggle.btn-reset(type="button", aria-label="Переключатель отображения меню", aria-pressed="false")
-          +icon("icon-burger", 20, 20)
-        .main-nav__wrapper
-          ul.main-nav__list
-            each link in headerLinks
-              - const activeState = currentUrl === link.href
-              li.main-nav__item
-                if(activeState)
-                  span.main-nav__link.is-active=link.text
-                else
-                  a.main-nav__link(href=link.href)=link.text
+      +logo(currentUrl).header__logo
+      +button()(aria-label="Переключатель отображения меню.", aria-pressed="false").header__toggle
+    +navigation(navigationLinks, currentUrl).header__navigation
