--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -23,7 +23,10 @@ include ./blocks/intro
 //- Mixins
 
 include ./mixins/button
+include ./mixins/link
 include ./mixins/custom-input
 include ./mixins/custom-select
 include ./mixins/custom-textarea
 include ./mixins/custom-toggle
+include ./mixins/logo
+include ./mixins/navigation
