--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,15 +19,17 @@
 // Blocks
 // ---------------------------------
 
+@import "blocks/button";
+@import "blocks/link";
+@import "blocks/custom-input";
+@import "blocks/custom-select";
+@import "blocks/custom-toggle";
+@import "blocks/input-upload";
 @import "blocks/header";
-@import "blocks/main-nav";
 @import "blocks/footer";
 @import "blocks/modal";
-@import "blocks/button";
-@import "blocks/custom-input";
-@import "blocks/custom-toggle";
-@import "blocks/custom-select";
-@import "blocks/input-upload";
+@import "blocks/logo";
+@import "blocks/navigation";
 
 // ---------------------------------
 
