feat(button): добавит стилизацию toggle

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,21 +1,79 @@
 .button {
-  display: inline-flex;
-  padding: 10px 20px;
-
-  color: $color-default-white;
-
+  position: relative;
+  display: block;
+  padding: 0;
+  background-color: $color-transparent;
   border: none;
   cursor: pointer;
-
   transition: opacity $trans-default;
-
-  &:disabled {
-    opacity: 0.5;
-
-    pointer-events: none;
-  }
 
   @include hover-focus {
     opacity: 0.8;
+  }
+
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
+  &--toggle {
+    width: 36px;
+    height: 40px;
+
+    &::before,
+    &::after {
+      position: absolute;
+      left: 0;
+      content: "";
+      width: 36px;
+      height: 2px;
+      background-color: $color-night-rider;
+      transition: transform $trans-default, background-color $trans-default;
+    }
+
+    &::before {
+      top: 13px;
+    }
+
+    &::after {
+      bottom: 13px;
+    }
+
+    &.is-active {
+      &::before,
+      &::after {
+        background-color: $color-default-white;
+      }
+
+      &::before {
+        transform: translate3d(0, 5px, 0) rotate(-45deg);
+      }
+
+      &::after {
+        transform: translate3d(0, -6px, 0) rotate(45deg);
+      }
+    }
+
+    @include hover-focus {
+      opacity: 1;
+
+      &::before {
+        transform: translate3d(-4px, 0, 0);
+      }
+
+      &::after {
+        transform: translate3d(4px, 0, 0);
+      }
+
+      &.is-active {
+        &::before {
+          transform: translate3d(0, 5px, 0) rotate(-39deg);
+        }
+
+        &::after {
+          transform: translate3d(0, -6px, 0) rotate(39deg);
+        }
+      }
+    }
   }
 }
