--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -2,4 +2,15 @@
   display: flex;
   width: 181px;
   height: 33px;
+  color: $color-night-rider;
+  transition: color $trans-default;
+
+  @include vp-767 {
+    width: 145px;
+    height: 26px;
+  }
+
+  .is-active & {
+    color: $color-default-white;
+  }
 }
