--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -33,6 +33,7 @@ $trans-default:                     0.3s $tf-default;
 $trans-modal:                       0.6s cubic-bezier(0.55, 0, 0.1, 1);
 $trans-menu:                        0.7s cubic-bezier(0.55, 0, 0.44, .99);
 
+$trans-400:                         0.4s $tf-default;
 $trans-600:                         0.6s $tf-default;
 
 // Viewports
