--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,1 +1,25 @@
-.header {}
+.header {
+  z-index: $z-index-header;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  padding: 15px 0;
+  background-color: $color-transparent;
+
+  @include vp-767 {
+    padding: 12px 0;
+  }
+
+  .container {
+    z-index: $z-index-header-top;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__logo {
+    flex: 0 0 auto;
+  }
+}
