--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -28,5 +28,8 @@ include ./mixins/custom-input
 include ./mixins/custom-select
 include ./mixins/custom-textarea
 include ./mixins/custom-toggle
+include ./mixins/section
 include ./mixins/logo
 include ./mixins/navigation
+include ./mixins/title
+include ./mixins/card
