--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,11 +25,15 @@
 @import "blocks/custom-select";
 @import "blocks/custom-toggle";
 @import "blocks/input-upload";
+@import "blocks/section";
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/logo";
 @import "blocks/navigation";
+@import "blocks/intro";
+@import "blocks/title";
+@import "blocks/card";
 
 // ---------------------------------
 
