--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -57,3 +57,4 @@ $retina-dppx:                       1.5dppx;
 // ---------------------------------
 $z-index-header:                    100;
 $z-index-header-top:                2;
+$z-index-intro-bg:                  -1;
