--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -7,6 +7,19 @@
   border-radius: 10px;
   background-color: rgba($color-default-white, 0.6);
 
+  @include vp-1023 {
+    min-height: 110px;
+    padding: 15px;
+  }
+
+  @include vp-767 {
+    min-height: unset;
+  }
+
+  @include hover-focus {
+    opacity: 0.7;
+  }
+
   &__title {
     text-align: right;
   }
