--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,5 +1,8 @@
 .intro {
   position: relative;
+  min-height: 200vh;
+  max-height: 200vh;
+  margin-bottom: -100vh;
   min-height: calc(200 * var(--vh, 1vh));
   max-height: calc(200 * var(--vh, 1vh));
   margin-bottom: calc(-100 * var(--vh, 1vh));
@@ -11,6 +14,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
+    max-height: 100vh;
     min-height: calc(100 * var(--vh, 1vh));
     max-height: calc(100 * var(--vh, 1vh));
     perspective: 1000px;
@@ -22,6 +27,11 @@
     justify-content: space-between;
     align-items: flex-end;
     padding-top: 40px;
+
+    @include vp-767 {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 
   &__description {
@@ -30,6 +40,11 @@
     line-height: calc(24 / 18);
     text-align: right;
     color: $color-night-rider;
+
+    @include vp-767 {
+      margin-top: 20px;
+      text-align: left;
+    }
   }
 
   &__cards {
@@ -40,6 +55,22 @@
     width: 67%;
     margin: 80px 0 0 auto;
     padding: 0;
+
+    @include vp-1279 {
+      width: 100%;
+    }
+
+    @include vp-1023 {
+      column-gap: 30px;
+      row-gap: 20px;
+    }
+
+    @include vp-767 {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 15px;
+      row-gap: 15px;
+      margin-top: 30px;
+    }
   }
 
   &__background {
