--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -1,6 +1,6 @@
 .section {
   position: relative;
-  padding: 90px 0 0;
+  padding-top: 90px;
   background-color: $color-default-white;
 
   &--no-padding {
