--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,6 +26,7 @@
 @import "blocks/custom-toggle";
 @import "blocks/input-upload";
 @import "blocks/section";
+@import "blocks/content-block";
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/modal";
