feat: добавит блок loader-block

--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -19,6 +19,9 @@ include ./modals/modal-success
 //- Blocks
 
 include ./blocks/intro
+include ./blocks/content-block
+include ./blocks/menu-block
+include ./blocks/loader-block
 
 //- Mixins
 
