--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -12,5 +12,9 @@ block variables
 block main
   main
     +intro()
+    +section()(id="menu")
+      +menu-block()
+    +section()(id="loader")
+      +loader-block()
 
 block modals
