feat: добавит блок first-screen-block

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -16,5 +16,7 @@ block main
       +menu-block()
     +section()(id="loader")
       +loader-block()
+    +section()(id="first-screen")
+      +first-screen-block()
 
 block modals
