feat: добавит блок show-scroll-block

--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -22,6 +22,8 @@ include ./blocks/intro
 include ./blocks/content-block
 include ./blocks/menu-block
 include ./blocks/loader-block
+include ./blocks/first-screen-block
+include ./blocks/show-scroll-block
 
 //- Mixins
 
