--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -18,5 +18,7 @@ block main
       +loader-block()
     +section()(id="first-screen")
       +first-screen-block()
+    +section()(id="show-on-scroll")
+      +show-scroll-block()
 
 block modals
