--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -3,7 +3,27 @@
   padding-top: 90px;
   background-color: $color-default-white;
 
-  &--no-padding {
-    padding: 0;
+  &:last-of-type {
+    padding-bottom: 90px;
+  }
+
+  @include vp-767 {
+    padding-top: 45px;
+
+    &:last-of-type {
+      padding-top: 45px;
+    }
+  }
+
+  &__cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    margin-top: 45px;
+    padding-bottom: 20px;
+
+    &:not(:last-child) {
+      margin-bottom: 45px;
+    }
   }
 }
