--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,6 +10,7 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
+$color-gainsboro:                   #e3e3e3;
 $color-night-rider:                 #303030;
 
 // Gradient
