feat: добавит блок parallax-block

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -20,5 +20,7 @@ block main
       +first-screen-block()
     +section()(id="show-on-scroll")
       +show-scroll-block()
+    +section()(id="parallax")
+      +parallax-block()
 
 block modals
