--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -24,6 +24,7 @@ include ./blocks/menu-block
 include ./blocks/loader-block
 include ./blocks/first-screen-block
 include ./blocks/show-scroll-block
+include ./blocks/parallax-block
 
 //- Mixins
 
