feat: добавит компонент loader

--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -39,3 +39,6 @@ include ./mixins/logo
 include ./mixins/navigation
 include ./mixins/title
 include ./mixins/card
+include ./mixins/scroll-slider
+include ./mixins/scroll-slide
+include ./mixins/loader
