--- a/source/sass/keyframes.scss
+++ b/source/sass/keyframes.scss
@@ -10,3 +10,49 @@
     opacity: 0;
   }
 }
+
+@keyframes rotate-360 {
+  to {
+    transform: rotate(-360deg);
+  }
+}
+
+@keyframes top-to-bottom {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(0, 300%, 0);
+  }
+}
+
+@keyframes left-to-right {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(300%, 0, 0);
+  }
+}
+
+@keyframes bottom-to-top {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(0, -300%, 0);
+  }
+}
+
+@keyframes right-to-left {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(-300%, 0, 0);
+  }
+}
