--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -35,6 +35,9 @@
 @import "blocks/intro";
 @import "blocks/title";
 @import "blocks/card";
+@import "blocks/scroll-slider";
+@import "blocks/scroll-slide";
+@import "blocks/loader";
 
 // ---------------------------------
 
