--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -46,6 +46,6 @@ block main
     +section()(id="parallax")
       +parallax-block()
     +scroll-slider(slides)
-  +loader().is-hidden
+  +loader()
 
 block modals
