--- a/source/sass/blocks/section.scss
+++ b/source/sass/blocks/section.scss
@@ -15,6 +15,15 @@
     }
   }
 
+  .content-block {
+    margin: 0 auto;
+    max-width: 70%;
+
+    @include vp-767 {
+      max-width: 100%;
+    }
+  }
+
   &__cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
