--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -12,6 +12,12 @@
     padding: 12px 0;
   }
 
+  &.is-active {
+    .header__logo {
+      color: $color-default-white;
+    }
+  }
+
   .container {
     z-index: $z-index-header-top;
     position: relative;
