--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -7,6 +7,41 @@
   max-height: calc(200 * var(--vh, 1vh));
   margin-bottom: calc(-100 * var(--vh, 1vh));
 
+  .card {
+    opacity: 0;
+    transform: scale(0.6);
+    transition: opacity $trans-350, transform $trans-400;
+
+    &:nth-child(1) {
+      transition-delay: 0.15s;
+    }
+
+    &:nth-child(2) {
+      transition-delay: 0.2s;
+    }
+
+    &:nth-child(3) {
+      transition-delay: 0.25s;
+    }
+
+    &:nth-child(4) {
+      transition-delay: 0.3s;
+    }
+
+    &:nth-child(5) {
+      transition-delay: 0.35s;
+    }
+
+    &:nth-child(6) {
+      transition-delay: 0.4s;
+    }
+  }
+
+  &.is-shown .card {
+    opacity: 1;
+    transform: scale(1);
+  }
+
   &__sticky {
     position: sticky;
     top: 0;
