--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 @import "mixins";
 @import "functions";
 @import "keyframes";
+@import "animation";
 @import "global/fonts";
 @import "global/reboot";
 @import "global/utils";
