--- a/source/pug/components/blocks/parallax-block.pug
+++ b/source/pug/components/blocks/parallax-block.pug
@@ -26,5 +26,5 @@ mixin parallax-block()
       .section__cards
         each card in animationCards
           div(data-parallax=card.animate)
-            .card.card--dark.card--centered(data-animate-item)
+            .card.card--dark.card--centered(data-parallax-item)
               +title({tag: "p", text: card.title}).title--h3
