--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+@import "vendor/splitting.scss";
 // Swiper 7.4.1
 // @import "vendor/swiper";
 
