--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -28,16 +28,17 @@ $fz-default:                        16px;
 // Animation
 // ---------------------------------
 
-$tf-default:                        ease;
-$trans-default:                     0.3s $tf-default;
+$tf-ease:                           ease;
+$tf-ease-out:                       ease-out;
+$trans-ease-default:                0.3s $tf-ease;
+$trans-ease-out-default:            0.3s $tf-ease-out;
 
 // если требуется изинг отличный от $tf-default, то переменную называем не цифрой
 $trans-modal:                       0.6s cubic-bezier(0.55, 0, 0.1, 1);
 $trans-menu:                        0.7s cubic-bezier(0.55, 0, 0.44, .99);
 
-$trans-350:                         0.35s $tf-default;
-$trans-400:                         0.4s $tf-default;
-$trans-600:                         0.6s $tf-default;
+$trans-ease-350:                    0.35s $tf-ease;
+$trans-ease-400:                    0.4s $tf-ease;
 
 // Viewports
 // ---------------------------------
