feat: добавит splitting анимацию в intro

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -39,6 +39,7 @@ $trans-menu:                        0.7s cubic-bezier(0.55, 0, 0.44, .99);
 
 $trans-ease-350:                    0.35s $tf-ease;
 $trans-ease-400:                    0.4s $tf-ease;
+$trans-ease-out-400:                0.4s $tf-ease-out;
 
 // Viewports
 // ---------------------------------
