--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -10,7 +10,7 @@
   .card {
     opacity: 0;
     transform: scale(0.6);
-    transition: opacity $trans-350, transform $trans-400;
+    transition: opacity $trans-ease-350, transform $trans-ease-400;
 
     &:nth-child(1) {
       transition-delay: 0.15s;
@@ -40,6 +40,10 @@
   &.is-shown .card {
     opacity: 1;
     transform: scale(1);
+  }
+
+  &.is-shown .word::after {
+    transform: translate3d(0, 0, 0);
   }
 
   &__sticky {
@@ -79,6 +83,17 @@
     @include vp-767 {
       margin-top: 20px;
       text-align: left;
+    }
+  }
+
+  &__title .word,
+  &__description .word {
+    overflow: hidden;
+
+    &::after {
+      transform: translate3d(0, 100%, 0);
+      transition: transform $trans-ease-out-400;
+      transition-delay: calc(0.08s * var(--line-index));
     }
   }
 
