feat: добавит map-1

--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -25,6 +25,7 @@ include ./blocks/loader-block
 include ./blocks/first-screen-block
 include ./blocks/show-scroll-block
 include ./blocks/parallax-block
+include ./blocks/ya-map
 
 //- Mixins
 
