--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -41,6 +41,7 @@
 @import "blocks/scroll-slider";
 @import "blocks/scroll-slide";
 @import "blocks/loader";
+@import "blocks/ya-map";
 
 // ---------------------------------
 
