--- a/source/pug/components/base/layout.pug
+++ b/source/pug/components/base/layout.pug
@@ -44,5 +44,6 @@ html(lang="ru")
 
     block modals
 
+    script(src="https://api-maps.yandex.ru/2.1/?apikey=2b0064a2-3442-4043-943f-7a8b7b3f838e&lang=ru_RU")
     script(src="js/vendor.min.js")
     script(src="js/main.min.js")
