--- a/source/pug/components/blocks/ya-map.pug
+++ b/source/pug/components/blocks/ya-map.pug
@@ -1,10 +1,12 @@
-mixin ya-map()
+mixin ya-map(data)
+  - const {title, subTitle, description, mapOption} = data
+  - const {id, center, zoom, markers} = mapOption
+
   section.ya-map&attributes(attributes)
     .container
-      +title({tag: "h1", text: "Задание по карте №1"}).title--h1.ya-map__title
-      +title({tag: "h2", text: "Техническое задание"})
-      p Реализовать карту через API Яндекс карт
-      p Настроить кастомный пин на карте так, что бы его стрелочка четко указывала на центр координат, которые вы можете придумать сами
-      p На десктопной версии при скролле колесиком мышки, карта не должна масштабироваться.
+      +title({tag: "h1", text: title}).title--h1.ya-map__title
+      +title({tag: "h2", text: subTitle})
+      each text in description
+        p!= text
       .ya-map__inner
-        .ya-map__map(data-map="map-1" data-center="59.968513, 30.317772" data-zoom="17")
+        .ya-map__map(data-map=id, data-center=center, data-zoom=zoom, data-markers-url=markers)
