feat: добавит стили для placemark

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -42,6 +42,8 @@
 @import "blocks/scroll-slide";
 @import "blocks/loader";
 @import "blocks/ya-map";
+@import "blocks/map-pin";
+@import "blocks/placemark";
 
 // ---------------------------------
 
