--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,6 +12,8 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 
 $color-white-smoke:                 #f6f6f6;
 $color-gainsboro:                   #e3e3e3;
+$color-maya-blue:                   #6bcaff;
+$color-nile-blue:                   #223c50;
 $color-night-rider:                 #303030;
 
 // Gradient
@@ -65,5 +67,6 @@ $z-index-header:                    100;
 $z-index-header-top:                2;
 $z-index-slide-container:           2;
 $z-index-slide-bg:                  1;
+$z-index-map-placemark:             1;
 $z-index-intro-bg:                  -1;
 $z-index-slide-content-before:      -1;
