feat: добавит стили для placemark-balloon

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -44,6 +44,7 @@
 @import "blocks/ya-map";
 @import "blocks/map-pin";
 @import "blocks/placemark";
+@import "blocks/placemark-balloon";
 
 // ---------------------------------
 
