feat: добавит компонент map-filter

--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -43,3 +43,4 @@ include ./mixins/card
 include ./mixins/scroll-slider
 include ./mixins/scroll-slide
 include ./mixins/loader
+include ./mixins/map-filter
