fix: мелкие правки

--- a/source/pug/pages/map-1.pug
+++ b/source/pug/pages/map-1.pug
@@ -22,6 +22,10 @@ block variables
         center: '59.968513, 30.317772',
         zoom: '17',
         markers: ''
+      },
+      mapFilters: {
+        withFilter: false,
+        filters: []
       }
     }
 
