--- a/source/pug/pages/map-2.pug
+++ b/source/pug/pages/map-2.pug
@@ -23,6 +23,10 @@ block variables
         center: '59.968513, 30.317772',
         zoom: '15',
         markers: 'data/maps-markers.json'
+      },
+      mapFilters: {
+        withFilter: false,
+        filters: []
       }
     }
 
