fix: название фильтра

--- a/source/pug/components/mixins/map-filter.pug
+++ b/source/pug/components/mixins/map-filter.pug
@@ -9,4 +9,4 @@ mixin map-filter(filters)
             label.map-filter__label(for=id)
               .map-filter__icon
                 +icon(icon, 50, 50)
-              span Все объекты
+              span=title
