feat: добавит стилизацию map-filter

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -45,6 +45,7 @@
 @import "blocks/map-pin";
 @import "blocks/placemark";
 @import "blocks/placemark-balloon";
+@import "blocks/map-filter";
 
 // ---------------------------------
 
