--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,7 @@ $color-white-smoke:                 #f6f6f6;
 $color-gainsboro:                   #e3e3e3;
 $color-cloudy:                      #aaa5a0;
 $color-maya-blue:                   #6bcaff;
+$color-blue:                        #0032ff;
 $color-nile-blue:                   #223c50;
 $color-night-rider:                 #303030;
 
