fix: добавит свойство cluster

--- a/source/pug/pages/map-1.pug
+++ b/source/pug/pages/map-1.pug
@@ -21,7 +21,8 @@ block variables
         id: 'map-1',
         center: '59.968513, 30.317772',
         zoom: '17',
-        markers: ''
+        markers: '',
+        cluster: 'false'
       },
       mapFilters: {
         withFilter: false,
