--- a/source/pug/pages/map-2.pug
+++ b/source/pug/pages/map-2.pug
@@ -22,7 +22,8 @@ block variables
         id: 'map-2',
         center: '59.968513, 30.317772',
         zoom: '15',
-        markers: 'data/maps-markers.json'
+        markers: 'data/maps-markers.json',
+        cluster: 'false'
       },
       mapFilters: {
         withFilter: false,
