--- a/source/pug/pages/map-3.pug
+++ b/source/pug/pages/map-3.pug
@@ -24,7 +24,8 @@ block variables
         id: 'map-3',
         center: '59.968513, 30.317772',
         zoom: '15',
-        markers: 'data/maps-markers.json'
+        markers: 'data/maps-markers.json',
+        cluster: 'false'
       },
       mapFilters: {
         withFilter: true,
@@ -70,7 +71,7 @@ block variables
             value: 'school',
             icon: 'icon-school',
             checked: false
-          },
+          }
         ]
       }
     }
