--- a/source/sass/blocks/placemark-balloon.scss
+++ b/source/sass/blocks/placemark-balloon.scss
@@ -22,6 +22,12 @@
     flex-shrink: 0;
     width: 100px;
     height: 100px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   &__wrap {
