--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -46,6 +46,7 @@
 @import "blocks/placemark";
 @import "blocks/placemark-balloon";
 @import "blocks/map-filter";
+@import "blocks/cluster-balloon";
 
 // ---------------------------------
 
