--- a/source/pug/pages/animations.pug
+++ b/source/pug/pages/animations.pug
@@ -1,13 +1,13 @@
 extends ../components/base/layout
 
 block variables
-  - const title = "Задачки на прокачку" //- на страницах кроме главной используйте О нас — ProjectName
+  - const title = "Анимации" //- на страницах кроме главной используйте О нас — ProjectName
   - const wrapperMods = ""
   - const hasHeader = true
   - const headerMods = ""
   - const hasFooter = false
   - const footerMods = ""
-  - const currentUrl = "index.html" //- для остальных страниц пишем пустую строку или индекс активного headerLinks
+  - const currentUrl = "animations.html" //- для остальных страниц пишем пустую строку или индекс активного headerLinks
   -
     const slides = [
       {
