--- a/source/pug/pages/sitemap.pug
+++ b/source/pug/pages/sitemap.pug
@@ -51,13 +51,29 @@ block main
   -
     const pages = [
       {
-        name: "UI-kit — ui-kit.html",
-        src: "ui-kit.html"
+        name: "Анимации — animations.html",
+        src: "animations.html"
       },
       {
-        name: "Главная — index.html",
-        src: "index.html"
+        name: "Карта - 1 — map-1.html",
+        src: "map-1.html"
       },
+      {
+        name: "Карта - 2 — map-2.html",
+        src: "map-2.html"
+      },
+      {
+        name: "Карта - 3 — map-3.html",
+        src: "map-3.html"
+      },
+      {
+        name: "Карта - 4 — map-4.html",
+        src: "map-4.html"
+      },
+      {
+        name: "UI-kit — ui-kit.html",
+        src: "ui-kit.html"
+      }
     ]
 
   main
