--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -3,9 +3,11 @@
   min-height: 200vh;
   max-height: 200vh;
   margin-bottom: -100vh;
+  /* stylelint-disable declaration-block-no-duplicate-properties */
   min-height: calc(200 * var(--vh, 1vh));
   max-height: calc(200 * var(--vh, 1vh));
   margin-bottom: calc(-100 * var(--vh, 1vh));
+  /* stylelint-enable declaration-block-no-duplicate-properties */
 
   &.is-shown .word::after {
     transform: translate3d(0, 0, 0);
@@ -20,8 +22,10 @@
     align-items: center;
     min-height: 100vh;
     max-height: 100vh;
+    /* stylelint-disable declaration-block-no-duplicate-properties */
     min-height: calc(100 * var(--vh, 1vh));
     max-height: calc(100 * var(--vh, 1vh));
+    /* stylelint-enable declaration-block-no-duplicate-properties */
     perspective: 1000px;
     overflow: hidden;
   }
