--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -39,7 +39,7 @@ $trans-ease-out-default:            0.3s $tf-ease-out;
 
 // если требуется изинг отличный от $tf-default, то переменную называем не цифрой
 $trans-modal:                       0.6s cubic-bezier(0.55, 0, 0.1, 1);
-$trans-menu:                        0.7s cubic-bezier(0.55, 0, 0.44, .99);
+$trans-menu:                        0.7s cubic-bezier(0.55, 0, 0.44, 0.99);
 
 $trans-ease-350:                    0.35s $tf-ease;
 $trans-ease-400:                    0.4s $tf-ease;
